--- a/package.json
+++ b/package.json
@@ -1,14 +1,21 @@
 {
-  "name": "my-vue-app",
+  "name": "co-explore",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "prettier --check .",
+    "lint:fix": "prettier --write .",
+    "test:unused-exports": "ts-unused-exports tsconfig.json"
   },
   "dependencies": {
+    "@visx/group": "^2.10.0",
+    "@visx/mock-data": "^2.15.1",
+    "@visx/scale": "^2.2.2",
+    "@visx/shape": "^2.12.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -16,6 +23,9 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react": "^3.0.0",
+    "@vitest/coverage-c8": "^0.25.2",
+    "prettier": "2.8.1",
+    "ts-unused-exports": "^8.0.5",
     "typescript": "^4.9.3",
     "vite": "^4.0.0"
   }
