--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "vite build --base=/co-explore-study/",
     "preview": "vite preview",
     "lint": "prettier --check .",
     "lint:fix": "prettier --write .",
