build(npm): install react router dom

--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "framer-motion": "^7.10.3",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.0.1",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.8.0"
   },
   "devDependencies": {
     "@types/d3-dsv": "^3.0.0",
