--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@vitejs/plugin-react": "^3.0.0",
     "@vitest/coverage-c8": "^0.25.2",
     "prettier": "2.8.1",
+    "prettier-plugin-organize-imports": "^3.2.2",
     "ts-unused-exports": "^8.0.5",
     "typescript": "^4.9.3",
     "vite": "^4.0.0"
