--- a/package.json
+++ b/package.json
@@ -20,11 +20,12 @@
     "d3-dsv": "^3.0.1",
     "framer-motion": "^7.10.3",
     "react": "^18.2.0",
-    "react-chartjs-2": "^5.0.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.0"
   },
   "devDependencies": {
+    "@rollup/plugin-dsv": "^3.0.2",
     "@types/d3-dsv": "^3.0.0",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
