feat: extend the pages of the site

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test:unused-exports": "ts-unused-exports tsconfig.json"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.0.17",
     "@chakra-ui/react": "^2.4.4",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
